pdf tarea completo

--- a/Main.tex
+++ b/Main.tex
@@ -945,6 +945,21 @@ Recuerde que $P_{n}(\mathbb{R}) = \{ a_0 +  a_1x +  a_2x^2 + \cdots +  a_n x^n \
 		2\alpha + 0\beta + \gamma &= 0\delta + \xi + 0\eta\\
 		-\alpha + 2\beta + \gamma &= 0\delta + 0\xi + \eta
 	\end{align*}
+	\begin{align*}
+		\begin{pmatrix}
+		\alpha & \beta & 2\gamma\\
+		2\alpha & 0\beta & \gamma\\
+		-\alpha & 2\beta & \gamma
+		\end{pmatrix} &= \begin{pmatrix}
+			 \delta & 0\xi & 0\eta\\
+			 0\delta & \xi & 0\eta\\
+			 0\delta & 0\xi & \eta
+		\end{pmatrix} = \begin{pmatrix}[ccc|ccc]
+			\alpha & \beta & 2\gamma & \delta & 0\xi & 0\eta\\
+			2\alpha & 0\beta & \gamma & 0\delta & \xi & 0\eta\\
+			-\alpha & 2\beta & \gamma & 0\delta & 0\xi & \eta
+		\end{pmatrix}
+	\end{align*}
 \noindent \textbf{9.} Diga si los siguientes $x^3-2x^2+1,4x^2-x+3 y 3x-2$ generan a $P_{3}(\R)$\\
 
 Sea $ax^3+bx^2+cx+d\in(\R)$.\\
