--- a/Main.tex
+++ b/Main.tex
@@ -1303,6 +1303,9 @@ Como podemos apreciar los valores de $\alpha_{3}$ no son los mismos, y esto es d
 		T(\xi a_1 + a_2) &= \xi( x_1 - y_1, 2z_1) + (x_2 - y_2, 2z_2)&& \text{Por distributividad de $ \xi $} \\
 		T(\xi a_1 + a_2) &= \xi T(a_1) + T(a_2) && \text{Por definición de T}
 	\end{align*}
+	\begin{center}
+		$ \therefore T $ es transformación lineal
+	\end{center}	
 	
 	
 
@@ -1322,10 +1325,21 @@ Como podemos apreciar los valores de $\alpha_{3}$ no son los mismos, y esto es d
 		T(\theta \hat{x} + \hat{y}) &=  \theta(a +b, 0, 2a - b) + (c + d, 0, 2c - d) &&\text{Distributividad \textit{inversa}}\\
 		T(\theta \hat{x} + \hat{y}) &=  \theta T(\hat{x}) + T(\hat{y}) &&\text{Definición de T}
 	\end{align*}
+	\begin{center}
+		$ \therefore T $ es transformación lineal
+	\end{center}	
+		
 
 	c) $\lbrace T: M_{2x3}(\mathbb{R}) \longrightarrow M_{2x2}(\mathbb{R}) \rbrace $ definido por
 	\[ T \begin{pmatrix} a_{11} & a_{12} & a_{13} \\ a_{21} & a_{22} & a_{23} \end{pmatrix} = \begin{pmatrix} 2a_{11} - a_{12} & a_{13} + 2a_{12} \\ 0 & 0 \end{pmatrix} \]
-
+	Sean $ A,B \in  M_{2x3}(\mathbb{R}), \lambda \in \R $ y que 
+	\[ A = \begin{pmatrix}
+		a_{11} & a_{12} & a_{13}\\
+		a_{21} & a_{22} & a_{23}
+	\end{pmatrix}, B = \begin{pmatrix}
+		b_{11} & b_{12} & b_{13}\\
+		b_{21} & b_{22} & b_{23}
+	\end{pmatrix} \]
 	
 	
 	d) $T: P_{2}(\mathbb{R}) \longrightarrow P_{3}(\mathbb{R}) \rbrace$ definida por $T(f(x)) = xf(x) + f'(x)$.
