--- a/Main.tex
+++ b/Main.tex
@@ -15,7 +15,11 @@ includefoot]{geometry}
 \usepackage{amsthm}
 \usepackage{graphicx}
 \usepackage{paralist}
-\usepackage{tasks}
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0.4pt}
+\cfoot{\textbf{Facultad de Ciencias, UNAM}\\ \thepage}
 
 \newcommand{\V}{\mathds{V}}
 
@@ -32,6 +36,8 @@ includefoot]{geometry}
 \newcommand{\R}{\mathds{R}}
 
 \renewcommand{\*}{\cdot}
+
+\newcommand{\ExiEscuela}{\textbf{Facultad de Ciencias, UNAM}}
 
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
@@ -111,7 +117,9 @@ includefoot]{geometry}
 	& = \lim_{h\to 0} \dfrac{c-c}{h}\\
 	&= 0
 	\end{align*}
-	Esto se vale para cualquier constante, en particular el 0\\
+	\begin{center}
+		Esto se vale para cualquier constante, en particular el 0
+	\end{center}
 	
  \noindent \textbf{3}. Prueba que el conjunto de las funciones pares en $\mathbb{R}$ es un espacio vectorial con suma y multiplicación por escalar usuales para funciones. Recuerde que una función es par si $\forall x \in Dom(f)$ entonces $f(-x) = f(x)$ \\
  	
@@ -126,7 +134,7 @@ includefoot]{geometry}
 
 No puede ser un espacio vectorial porque si tenemos que \[ 0(a_1, a_2) = (0, a_2)  \] para cumplir el cero vector, entonces se compliría para cualquier $a_2$ lo cual no es posible pues contradice la unicidad del cero.\\
 
-\noindent 5. Determinar cuales de los siguientes conjuntos son subespacios de $\mathbb{R}^{3}$ bajo las operaciones de suma y multiplicación por un escalar usual.\\
+\noindent 5. Determinar cuales de los siguientes conjuntos son subespacios de $\mathbb{R}^{3}$ bajo las operaciones de suma y multiplicación por un escalar usual.
 \begin{definition}
 	Sea $ \mathcal{U} $ un subconjunto de $ \mathcal{V}$ espacio vectorial sobre $ \F $ decimos que $ \mathcal{U} $ es un subespacio vectorial de $ \mathcal{V} $ si cumple lo siguiente
 	
@@ -138,8 +146,7 @@ No puede ser un espacio vectorial porque si tenemos que \[ 0(a_1, a_2) = (0, a_2
 	   
 \end{definition}
 
-\begin{tasks}(1)
-\task $W_{1} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1}=3a_{2}$ y $a_{3}=-a_{2} \rbrace$
+a) $W_{1} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1}=3a_{2}$ y $a_{3}=-a_{2} \rbrace$
 
 Veamos que $ W_{1} $ contiene a $ \vec{0} $ esto es que algún elemento en $ W_{1} = (0,0,0) $ por lo que 
 	\begin{align*}
@@ -168,8 +175,12 @@ Sean $ \hat{u} = (a_{1},a_{2},a_{3})  $ y $\hat{v} (b_{1},b_{2},b_{3})  \in W_1$
 	
 	Por lo tanto cumple $ III) $ 
 	
-	$ \therefore W_1  $ es subespacio vectorial de $ \R^3 $
-\task $W_{2} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1} = a_{3} + 2 \rbrace$
+	\begin{center}
+		$ \therefore W_1  $ es subespacio vectorial de $ \R^3 $
+	\end{center}
+
+
+b) $W_{2} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1} = a_{3} + 2 \rbrace$
 
 Veamos si $ \hat{0} \in W_2 $ si esto ocurriera entonces $ (0,0,0)  \in W_2$ l que significaría lo siguiente
 \begin{align*}
@@ -180,10 +191,13 @@ Veamos si $ \hat{0} \in W_2 $ si esto ocurriera entonces $ (0,0,0)  \in W_2$ l q
 \end{align*}
 Podemos observar que en esta situación, $ a_3 = -2 \land a_3 = 0 $ lo cual no es posible, dicha contradicción vino de suponer que $ \hat{0} \in W_2 $
 
-\[ \therefore \hat{0} \notin W_2  \] por lo que $ W_2 $ \textbf{no} es subespacio vectorial de $ \R^3 $
+\[ \therefore \hat{0} \notin W_2  \] 
+\begin{center}
+	por lo que $ W_2 $ \textbf{no} es subespacio vectorial de $ \R^3 $
+\end{center}
 
 
-\task $W_{3} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  2a_{1} - 7a_{2} + a_{3} = 0 \rbrace$
+\noindent c) $W_{3} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  2a_{1} - 7a_{2} + a_{3} = 0 \rbrace$
 
 Notemos que en la declaración de los elementos de $ W_3 $ podemos deducir que \[ a_3 = 7a_2 - 2 a_1 \] entonces $ \hat{u} \in W_3 \implies \hat{u} = (a_1, a_2, 7a_2 - 2a_1)  $
 
@@ -197,7 +211,7 @@ Veamos que para cumplir $ I) $ el vector cero debería estar en $ W_1 $ \textit{
 \end{align*}
  lo anterior se cumple si $ a_2 = 0 = a_1 $
  
- $ \therefore \hat{0} \in W_3 $
+ $$ \therefore \hat{0} \in W_3 $$
  
  Ahora, sean $ \hat{u}, \hat{v} \in W_3 \implies \hat{u} = (a_1, a_2, 7a_2 - 2a_1) \land \hat{v} = (b_1, b_2, 7b_1 - 2 b_1) $ y probemos que $ \hat{u} + \hat{v} \in W_3 $
  
@@ -213,10 +227,11 @@ Veamos que para cumplir $ I) $ el vector cero debería estar en $ W_1 $ \textit{
 		k\hat{u} &= (ka_1, ka_2, 7ka_2 - 2ka_1)
 	\end{align*}
 	De lo anterior podemos concluir que cada uno de esos $ ka_1, ka_2 $  elementos estarán en $ \R  $ por lo que $ k\hat{u} $ resultarán también estar en $ W_3 $
-	
+	\begin{center}
 	$ \therefore W_3$ es un subespacio vectorial de $ \R^3 $
+	\end{center}
 
-\task $W_{4} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1} - 4a_{2} - a_{3} = 0 \rbrace$
+d) $W_{4} = \lbrace (a_{1},a_{2},a_{3}) \in \mathbb{R}^{3} \big\vert  a_{1} - 4a_{2} - a_{3} = 0 \rbrace$
 De la definición de los elementos de $ W_4 $ se sigue que si $ \hat{u} $ es un elemento de este conjunto, tendrá la forma $ \hat{u}= (4a_2 + a_3, a_2, a_3) $
 Comencemos averiguando si $ W_4 $ tiene elemento neutro, \textit{i. e.}
 
@@ -245,9 +260,9 @@ Finalmente notemos que si $ k \in \R, \hat{u} \in W_4 \implies k\* \hat{u} \in W
 \end{align*}
 
 y $ ka_2, k_3 \in \R $ entonces $ k\*\hat{u} \in W_4 $
-
-$ \therefore W_4 $ es subespacio vectorial de $ \R^3 $
-\end{tasks}
+\begin{center}
+	$ \therefore W_4 $ es subespacio vectorial de $ \R^3 $
+\end{center}
 
 
 \noindent \textbf{6}. En cada caso diga si los vectores son generados por el conjunto $S$ \\
@@ -263,23 +278,23 @@ Sea $\alpha _1$, $\alpha _2 \in \mathbb{R}$.
 Entonces $(2,-1,1) = \alpha _{1}(1,0,2) + \alpha _{2}(-1,1,1) = (\alpha _{1}, 0, 2\alpha _{1})+ (-\alpha _{2},\alpha _{2},\alpha _{2}) = \alpha _{1}-\alpha _{2},\alpha _{2},2\alpha _{1}+\alpha _{2}$.
 
 Tenemos el siguiente sistema de ecuaciones:
-\begin{eqnarray*}
-\alpha_{1}-\alpha_{2}= 2 \\
-\alpha_{2} = -1\\
-2\alpha_{1}+\alpha_{2}=1\\
-\end{eqnarray*}
+\begin{align*}
+\alpha_{1}-\alpha_{2}&= 2 \\
+\alpha_{2} &= -1\\
+2\alpha_{1}+\alpha_{2}&=1\\
+\end{align*}
 Ahora:
-\begin{eqnarray*}
-\alpha_{1} -(-1)=2 \\
-\alpha_{2}=-1\\
-2\alpha_{1} + \alpha_{2} = 1\\
-\end{eqnarray*}
+\begin{align*}
+\alpha_{1} -(-1)&=2 \\
+\alpha_{2}&=-1\\
+2\alpha_{1} + \alpha_{2} &= 1\\
+\end{align*}
 Al resolver el sistema, obtenemos:
-\begin{eqnarray*}
-\alpha_{1}=1 \\
-\alpha_{2} = -1 \\
-1 = 1
-\end{eqnarray*}
+\begin{align*}
+\alpha_{1}&=1 \\
+\alpha_{2} &= -1 \\
+1 &= 1
+\end{align*}
 Entonces:\\ $1(1,0,2) + (-1)(-1,1,1) = (1,0,2) + (1,-1,-1) = (2,-1,1)$\\
 Cómo el sistema de ecuaciones si se satisface, el conjunto $S$ SI genera al vector $(2,-1,-1)$\\ \\
 
@@ -288,26 +303,26 @@ Cómo el sistema de ecuaciones si se satisface, el conjunto $S$ SI genera al vec
 Sea $\alpha _1$, $\alpha _2 \in \mathbb{R}$.\\
 Entonces: $(2,-1,1,3)=\alpha_{1}(1,0,1,-1)+\alpha_{2}(0,1,1,1)= (\alpha_{1},0,\alpha_{1},-\alpha_{1})+(0,\alpha_{2},\alpha_{2},\alpha_{2})= \alpha_{1},\alpha_{2},\alpha_{1}+\alpha_{2},-\alpha_{1}+\alpha_{2}$.\\
 Tenemos el siguiente sistema de ecuaciones:\\
-\begin{eqnarray*}
+\begin{align*}
 \alpha_{1}=2\\
 \alpha_{2} = -1\\
 \alpha_{1}+\alpha_{2}=1\\
 -\alpha_{1}+\alpha_{2}=3\\
-\end{eqnarray*}
+\end{align*}
 Ahora:\\
-\begin{eqnarray*}
+\begin{align*}
 \alpha_{1}=2\\
 \alpha_{2}= -1\\
 2-1  =1\\
 -(-1)+2 = 3\\
-\end{eqnarray*}
+\end{align*}
 Por último:
-\begin{eqnarray*}
+\begin{align*}
 \alpha_{1}=2\\
 \alpha_{2}=-1\\
 1=1\\
 3=3\\
-\end{eqnarray*}
+\end{align*}
 Al resolver el sistema de ecuaciones verificamos si el conjunto $S$ genera al vector. Entonces:
 \[2(1,0,1,-1)+(-1)(0,1,1,1)=(2,0,2,-2)+(0,-1,-1,-1)=(2,-1,-1,-3)\]
 Como el producto de los escalares por los elementos del conjunto $S$ no forman al vector, podemos concluir que $S$ \textbf{NO} genera a $(2,-1,1,3)$.\\
@@ -317,17 +332,17 @@ Como el producto de los escalares por los elementos del conjunto $S$ no forman a
 Sean $\alpha_1 $, $\alpha_2$ y $\alpha_3$ elementos del campo, si suponemos que $2x^3 - x^2 + x + 3$ es generado por $S$ implicará que existen dichos 3 elementos $\tq$ 
 \[ 2x^3 - x^2 + x + 3 = \alpha_1 (x^3 + x^2 + x +1) + \alpha_2 (x^2 + x +1) + \alpha_3 (x +1) \]
 
-\begin{eqnarray*}
+\begin{align*}
 	\alpha_1 x^3 + \alpha_1 x^2 + \alpha_1 x + \alpha_1 	\\
 	\alpha_2 x^2 + \alpha_2 x + \alpha_2 \\
 	\alpha_3 x + \alpha_3 
-\end{eqnarray*}
+\end{align*}
 Por lo que ocurre lo siguiente
 \[ 2x^3 - x^2 + x + 3 = \alpha_1 x^3 + \alpha_1 x^2 + \alpha_1 x + \alpha_1 + \alpha_2 x^2 + \alpha_2 x + \alpha_2 +\alpha_3 x + \alpha_3  \]
-\begin{eqnarray*}
+\begin{align*}
 2x^3 - x^2 + x + 3 &= \alpha_1 x^3 + \alpha_1 x^2 + \alpha_1 x + \alpha_1 + \alpha_2 x^2 + \alpha_2 x + \alpha_2 +\alpha_3 x + \alpha_3 \\
  &= x^3 (\alpha_3)  + x^2 (\alpha_2 + \alpha_1) + x(\alpha_3 + \alpha_2 + \alpha_1) + \alpha_1 + \alpha_2 + \alpha_3
- \end{eqnarray*}
+ \end{align*}
  \begin{align*}
 	\alpha_3 &=  2\\
 	\alpha_2 &= -1 - \alpha_1 \\
@@ -337,11 +352,23 @@ Por lo que ocurre lo siguiente
 
 Ahora llegamos a una contradicción, puesto que el sistema de ecuaciones anterior implica que $\alpha_1 + \alpha_2 + \alpha_3 = 3 = 1$ por lo que el conjunto S no genera $ 2x^3 - x^2 + x + 3$
 
-\textbf{d)} $$ \begin{pmatrix} 1 & 2 \\ -3 & 4 \end{pmatrix},  S =  \lbrace \begin{pmatrix} 1 & 0 \\ -1 & 0 \end{pmatrix} , \begin{pmatrix} 0 & 1 \\ 0 &1 \end{pmatrix} , \begin{pmatrix} 1 & 1 \\ 0 &0 \end{pmatrix} \rbrace$$
+\textbf{d)} $$ \begin{pmatrix} 1 & 2 \\ -3 & 4 \end{pmatrix},  S =  \left\lbrace \begin{pmatrix} 1 & 0 \\ -1 & 0 \end{pmatrix} , \begin{pmatrix} 0 & 1 \\ 0 &1 \end{pmatrix} , \begin{pmatrix} 1 & 1 \\ 0 &0 \end{pmatrix} \right\rbrace$$
 Recordemos que la suma de matrices se hace entrada por entrada eso es, si se van a sumar 2 matrices $A + B$ se hace de la forma $a_{ij} + b_{ij}  \forall i,j \in A,B$ de tal manera que existen  $a_{ij} + b_{ij}  \forall i,i \in A,B$ de tal manera que existen $\alpha, \beta, \gamma \tq $
 
 \begin{align*}
- \begin{pmatrix} 1 & 2 \\ -3 & 4 \end{pmatrix} &= \alpha \begin{pmatrix} 1 & 0 \\ -1 & 0 \end{pmatrix}  + \beta \begin{pmatrix} 0 & 1 \\ 0 &1 \end{pmatrix}  + \gamma  \begin{pmatrix} 1 & 1 \\ 0 &0 \end{pmatrix} \\
+ \begin{pmatrix} 
+ 1 & 2 \\ 
+ -3 & 4 
+ \end{pmatrix} &= \alpha \begin{pmatrix} 
+ 1 & 0 \\ 
+ -1 & 0 
+ \end{pmatrix}  + \beta \begin{pmatrix} 
+ 0 & 1 \\
+ 0 &1 
+ \end{pmatrix}  + \gamma  \begin{pmatrix} 
+ 1 & 1 \\
+ 0 &0 
+ \end{pmatrix} \\
   & = \begin{pmatrix} \alpha_{1,1}  + \gamma_{1,1} & \beta_{1,2} + \gamma_{1,2} \\ -\alpha_{2,1} & \beta_{2,2} \end{pmatrix}  
 \end{align*}
 
@@ -382,14 +409,12 @@ Tenemos el siguiente sistema de ecuaciones:
 \end{align*}
 \end{center}
 Multiplicamos dos veces el renglón 3 y lo sumamos al renglón 4. También multiplicamos dos veces el renglón 1 y lo sumamos al renglón 3.
-\begin{center}
 \begin{align*}	
-	\alpha_{1}-2\alpha_{2} = 0\\
-	-3\alpha_{1}+6\alpha_{2}= 0\\
-	0\alpha_{1}+0\alpha_{2}=0\\
-	0\alpha_{1}+0\alpha_{2}= 0
+	\alpha_{1}-2\alpha_{2} &= 0\\
+	-3\alpha_{1}+6\alpha_{2}&= 0\\
+	0\alpha_{1}+0\alpha_{2}&=0\\
+	0\alpha_{1}+0\alpha_{2}&= 0
 \end{align*}
-\end{center}
 Por último multiplicamos tres veces el renglón 1 y lo sumamos al renglón 2:
 \begin{center}
 \begin{align*}
@@ -552,12 +577,11 @@ Entonces podemos concluir que el conjunto $\lbrace (1,-1,2), (1,-2,1), (1,1,4) \
 
 Sean $\alpha_{1}, \alpha_{2}, \alpha_{3}\in \mathbb{R}$.
 
-$\alpha_{1}(1,-1,2)+\alpha_{2}(2,0,1)+ \alpha_{3}(-1,2,-1)=(0,0,0)$.
-Ahora:\\
-
-$(\alpha_{1},-\alpha_{1},2\alpha_{1})+(2\alpha_{2},0\alpha_{2},\alpha_{2})+ (-\alpha_{3},2\alpha_{3},-\alpha_{3})=(0,0,0)$. Ordenamos los escalares:\\
-
-$(\alpha_{1}+2\alpha_{2}-\alpha_{3}, -\alpha_{1}+0\alpha_{2}+2\alpha_{3}, 2\alpha_{1}+\alpha_{2}-\alpha_{3})= (0,0,0)$\\
+\begin{align*}
+	\alpha_{1}(1,-1,2)+\alpha_{2}(2,0,1)+ \alpha_{3}(-1,2,-1)&=(0,0,0) && \text{Ahora}\\
+	(\alpha_{1},-\alpha_{1},2\alpha_{1})+(2\alpha_{2},0\alpha_{2},\alpha_{2})+ (-\alpha_{3},2\alpha_{3},-\alpha_{3})&=(0,0,0) && \text{Ordenamos los escalares}\\
+	(\alpha_{1}+2\alpha_{2}-\alpha_{3}, -\alpha_{1}+0\alpha_{2}+2\alpha_{3}, 2\alpha_{1}+\alpha_{2}-\alpha_{3}) &= (0,0,0) &&\\
+\end{align*}
 
 Obtenemos el siguiente sistema de ecuaciones:
 \begin{center}
@@ -624,7 +648,6 @@ Recuerde que $P_{n}(\mathbb{R}) = \{ a_0 +  a_1x +  a_2x^2 + \cdots +  a_n x^n \
 		0\alpha + 5\beta -4\gamma = 0\delta + \epsilon + 0\eta\\
 		-\alpha + \beta +3\gamma = 0\delta +0\epsilon + \eta
 	\end{align*}
-	
 	\begin{align*}
 		\begin{pmatrix}
 			\alpha & 2\beta & 0\gamma\\
@@ -1194,8 +1217,8 @@ $ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+
 		\begin{align*}
 		\alpha_{1}&=a\\
 		\alpha_{2}&=\frac{b+2a}{4}\\
-		-(\frac{b+2a}{4})+3\alpha_{3}&=c\\
-		a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
+		-\left( \frac{b+2a}{4} \right)+3\alpha_{3}&=c\\
+		a+3\left( \frac{b+2a}{4} \right)-2\alpha_{3}&=d
 		\end{align*}
 	\end{center}
 	Observamos que tenemos 2 ecuaciones, en las cuáles sólo hay un valor a encontrar, entonces en estas dos ecuaciones procedemos a encontrar el valor de $\alpha_{3}$. Primero comenzaremos con el renglón 3.
@@ -1203,8 +1226,8 @@ $ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+
 		\begin{align*}
 		\alpha_{1}&=a\\
 		\alpha_{2}&=\frac{b+2a}{4}\\
-		3\alpha_{3}&=\frac{4c}{4}+(\frac{b+2a}{4})\\
-		a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
+		3\alpha_{3}&=\frac{4c}{4}+\left( \frac{b+2a}{4} \right)\\
+		a+3\left( \frac{b+2a}{4} \right)-2\alpha_{3}&=d
 		\end{align*}
 	\end{center}
 	Ahora:
@@ -1213,7 +1236,7 @@ $ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+
 		\alpha_{1}&=a\\
 		\alpha_{2}&=\frac{b+2a}{4}\\
 		\alpha_{3}&=\frac{\frac{4c+b+2a}{4}}{3}\\
-		a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
+		a+3\left( \frac{b+2a}{4} \right)-2\alpha_{3}&=d
 		\end{align*}
 	\end{center}
 	Obtenemos el primer valor de $\alpha_{3}$: 
@@ -1222,7 +1245,7 @@ $ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+
 		\alpha_{1}&=a\\
 		\alpha_{2}&=\frac{b+2a}{4}\\
 		\alpha_{3}&=\frac{4c+b+2a}{12}\\
-		a+3(\frac{b+2a}{4})-2\alpha_{3}&=d
+		a+3\left( \frac{b+2a}{4} \right)-2\alpha_{3}&=d
 		\end{align*}
 	\end{center}
 	Encontraremos el valor de $\alpha_{3}$ en la ecuación cuatro.
@@ -1231,7 +1254,7 @@ $ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+
 		\alpha_{1}&=a\\
 		\alpha_{2}&=\frac{b+2a}{4}\\
 		\alpha_{3}&=\frac{4c+b+2a}{12}\\
-		a+(\frac{3b+6a}{4})-2\alpha_{3}&=d
+		a+\left( \frac{b+2a}{4} \right)-2\alpha_{3}&=d
 		\end{align*}
 	\end{center}
 	\begin{center}
@@ -1239,7 +1262,7 @@ $ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+
 		\alpha_{1}&=a\\
 		\alpha_{2}&=\frac{b+2a}{4}\\
 		\alpha_{3}&=\frac{4c+b+2a}{12}\\
-		2\alpha_{3}&=a+(\frac{3b+6a}{4})-d
+		2\alpha_{3}&=a+\left(\frac{3b+6a}{4}\right)-d
 		\end{align*}
 	\end{center}
 	\begin{center}
@@ -1247,7 +1270,7 @@ $ax^3+bx^2+cx+d = (\alpha_{1})x^3 + (-2\alpha_{1}+4\alpha_{2})x^2 + (\alpha_{2}+
 		\alpha_{1}&=a\\
 		\alpha_{2}&=\frac{b+2a}{4}\\
 		\alpha_{3}&=\frac{4c+b+2a}{12}\\
-		2\alpha_{3}&=\frac{4a}{4}+(\frac{3b+6a}{4})-\frac{4d}{4}
+		2\alpha_{3}&=\frac{4a}{4}+\left(\frac{3b+6a}{4}\right)-\frac{4d}{4}
 		\end{align*}
 	\end{center}
 	\begin{center}
@@ -1580,6 +1603,22 @@ Como podemos apreciar los valores de $\alpha_{3}$ no son los mismos, y esto es d
 	
 	Notemos que el término constante y el cuadrático son el mismo por lo que la imagen de la transformación son todos los polinomios en 
 	$$ p(x) \in P_3 (\R) \tq p(x) = a + (c + 2b)x + ax^2 + bx^3  $$
+	
+	
+	\noindent11. Sean $\beta$ y $\gamma$ las bases estándar para $\mathbb{R}^{n}$ y $\mathbb{R}^{m}$ respectivamente. Para cada transformación lineal $T: \mathbb{R}^{n} \longrightarrow \mathbb{R}^{m}$ encontrar su representación matricial.
+	
+		a) $T: \mathbb{R}^{2} \longrightarrow \mathbb{R}^{3}$ definido por $T(a_{1},a_{2}) = (2a_{1} - a_{2}, 3a_{1} + 4a_{2},a_{1})$
+		
+		
+		b) $T: \mathbb{R}^{3} \longrightarrow \mathbb{R}^{2}$ definido por 
+		$T(a_{1},a_{2},a_{3}) = (2a_{1} + 3a_{2} - a_{3}, a_{1} + a_{3})$
+		
+		
+		c) $T: \mathbb{R}^{3} \longrightarrow \mathbb{R}$ definido por $T(a_{1},a_{2},a_{3}) = 2a_{1} + a_{2} - 3a_{3}$
+		
+		
+		d) $T: \mathbb{R}^{3} \longrightarrow \mathbb{R}^{3}$ definido por $T(a_{1},a_{2},a_{3}) = (2a_{2} + a_{3}, -a_{1} + 4a_{2} + 5a_{3},a_{1} + a_{3})$
+
 \end{document}
 
 
