Un cambio más para intentar que mis mensajes sean personalizados Agregando .gitmessaje para la configuracion de mi repositorio local

--- a/Tarea1.tex
+++ b/Tarea1.tex
@@ -21,7 +21,7 @@
 \providecommand{\norm}[1]{\lVert#1\rVert}
 
 %=================================================================================
-%	Definición de comandos
+%aaaaa	Definición de comandos
 %=================================================================================
 \newcommand{\informacion}[1]{
 \begin{center}
