Definiciones para Ej. 11 No habia definido la respresentacion matricial A?adi las dos definiciones faltantes Note

--- a/Tarea01/Main.tex
+++ b/Tarea01/Main.tex
@@ -23,6 +23,8 @@ includefoot]{geometry}
 
 \newcommand{\V}{\mathds{V}}
 
+\newcommand{\W}{\mathds{W}}
+
 \newcommand{\F}{\mathds{F}}
 
 \newcommand{\tq}{ \quad \cdot  \backepsilon \cdot \quad }
@@ -1606,7 +1608,9 @@ Como podemos apreciar los valores de $\alpha_{3}$ no son los mismos, y esto es d
 	
 	
 	\noindent11. Sean $\beta$ y $\gamma$ las bases estándar para $\mathbb{R}^{n}$ y $\mathbb{R}^{m}$ respectivamente. Para cada transformación lineal $T: \mathbb{R}^{n} \longrightarrow \mathbb{R}^{m}$ encontrar su representación matricial.
-	
+	\begin{definition}
+		Sean $ \V $ y $ \W $ espacios vectoriales de dimensión finita y $ \beta, \gamma $ sus respectivas bases. Además consideremos $ T: \V \rightarrow \W $ transformación lineal, entonces definimos a la matriz asociada a la función T de la base $ \beta $
+	\end{definition}
 		a) $T: \mathbb{R}^{2} \longrightarrow \mathbb{R}^{3}$ definido por $T(a_{1},a_{2}) = (2a_{1} - a_{2}, 3a_{1} + 4a_{2},a_{1})$
 		
 		
